# voicee

./: .env  .env.production  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  utils.rs
src/components/SvgIcon/: index.vue
src/layout/: index.vue
src/layout/components/: Activate.vue  Header.vue
src/router/: index.js  index.ts
src/styles/: app.scss  common.scss  element-ui-cover.scss  elementPlusDark.scss  index.scss
src/utils/: commands.ts
src/views/home/: index.vue
src/views/splashscreen/: index.vue
